# ezo-driver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Ezo_i2c.cpp  Ezo_i2c.h  Ezo_i2c_util.cpp  Ezo_i2c_util.h  README.md  iot_cmd.cpp  iot_cmd.h  library.json  library.properties  sequencer1.cpp  sequencer1.h  sequencer2.cpp  sequencer2.h  sequencer3.cpp  sequencer3.h  sequencer4.cpp  sequencer4.h
.github/workflows/: ci.yml
Examples/: README.md
Examples/I2c_lib_examples/EC_parsing_and_DO_compensation/: EC_parsing_and_DO_compensation.ino
Examples/I2c_lib_examples/I2c_read_mulitple_circuits/: I2c_read_mulitple_circuits.ino
Examples/I2c_lib_examples/humidity_parsing/: humidity_parsing.ino
Examples/I2c_lib_examples/i2c_scan_and_comms_example/: i2c_scan_and_comms_example.ino
Examples/I2c_lib_examples/iot_cmd_sample_code/: iot_cmd_sample_code.ino
Examples/I2c_lib_examples/temp_comp_example/: temp_comp_example.ino
Examples/I2c_lib_examples/temp_comp_rt_example/: temp_comp_rt_example.ino
Examples/IOT_kits/Adafruit feather huzzah legacy code/aquaponics_kit/: aquaponics_kit.ino
Examples/IOT_kits/Adafruit feather huzzah legacy code/hydroponics_kit/: hydroponics_kit.ino
Examples/IOT_kits/Adafruit feather huzzah legacy code/legacy_hydroponics_kit/: legacy_hydroponics_kit.ino
Examples/IOT_kits/Adafruit feather huzzah legacy code/legacy_pool_kit/: legacy_pool_kit.ino
Examples/IOT_kits/Adafruit feather huzzah legacy code/pool_kit/: pool_kit.ino
Examples/IOT_kits/aquaponics_kit/: aquaponics_kit.ino
Examples/IOT_kits/hydroponics_kit/: hydroponics_kit.ino
Examples/IOT_kits/hydroponics_kit_with_DO/: hydroponics_kit_with_DO.ino
Examples/IOT_kits/pool_kit/: pool_kit.ino
Examples/IOT_kits/thingspeak_example/: thingspeak_example.ino
Examples/Products/tri_pmp_sample_code/: tri_pmp_sample_code.ino
Examples/Projects/pH_EC_led_indicator/: pH_EC_led_indicator.ino
Examples/Projects/pH_dosing_pump/: pH_dosing_pump.ino
Examples/Sequencer_lib_examples/seq2_led_test/: seq2_led_test.ino
Examples/Sequencer_lib_examples/seq3_led_test/: seq3_led_test.ino
_reference/: Ezo_i2c.cpp  Ezo_i2c.h  Ezo_i2c_util.cpp  Ezo_i2c_util.h  iot_cmd.cpp  iot_cmd.h  sequencer1.cpp  sequencer1.h  sequencer2.cpp  sequencer2.h  sequencer3.cpp  sequencer3.h  sequencer4.cpp  sequencer4.h
_reference/Examples/I2c_lib_examples/: README.md
_reference/Examples/I2c_lib_examples/I2c_read_mulitple_circuits/: I2c_read_mulitple_circuits.ino
_reference/Examples/I2c_lib_examples/humidity_parsing/: humidity_parsing.ino
_reference/Examples/I2c_lib_examples/i2c_scan_and_comms_example/: i2c_scan_and_comms_example.ino
_reference/Examples/I2c_lib_examples/iot_cmd_sample_code/: iot_cmd_sample_code.ino
_reference/Examples/IOT_kits/pool_kit/: pool_kit.ino
adapters/: README.md
adapters/arduino/: README.md  ezo_arduino_wire.cpp
adapters/linux/: README.md  ezo_linux_i2c.c
bindings/python/: MANIFEST.in  README.md  build_ffi.py  pyproject.toml  setup.py
bindings/python/cdef/: ezo_api.h  ezo_test_bridge.h
bindings/python/src/ezo_driver/: __init__.py  _call.py  _ffi.py  _support.py  base.py  calibration_transfer.py  control.py  do.py  ec.py  enums.py  errors.py  hum.py  i2c.py  orp.py  parse.py  ph.py  product.py  rtd.py  schema.py  types.py  uart.py
bindings/python/src/ezo_driver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/python/src/ezo_driver_py/: _core.pyx
bindings/python/tests/: __init__.py  _support.py  test_control_and_calibration.py  test_products.py  test_public_api.py  test_shared_and_transport.py
bindings/python/testsupport/: ezo_test_bridge.c  ezo_test_bridge.h
docs/: README.md  api-contract.md  architecture.md  c-api-draft.md  canonical-call-flows.md  canonical-library-direction.md  decision-log.md  error-status-model.md  examples.md  foundation.md  master-plan.md  migration-guide.md  product-onboarding.md  public-api-layers.md  reference-audit.md  support-matrix.md  timing-semantics.md  transport-contract.md  vision.md
docs/ezo/: README.md  source-policy.md
docs/ezo/common/: command-taxonomy.md  i2c.md  mode-switching.md  uart.md
docs/ezo/products/: do.md  ec.md  hum.md  orp.md  ph.md  rtd.md
examples/: README.md  linux_control_status.c  linux_do_read.c  linux_ec_read.c  linux_hum_read.c  linux_identity.c  linux_read.c
examples/arduino_read/: arduino_read.ino
examples/arduino_smoke/: arduino_smoke.ino
examples/arduino_uart_read/: arduino_uart_read.ino
examples/arduino_uart_smoke/: arduino_uart_smoke.ino
examples/linux/common/: README.md  example_base.c  example_base.h  example_control.c  example_i2c.c  example_i2c.h  example_product_i2c.c  example_product_i2c.h  example_product_uart.c  example_product_uart.h  example_products.c  example_products.h  example_uart.c  example_uart.h
include/: README.md  ezo_i2c.h  ezo_i2c.hpp
include/ezo_i2c/: ezo_i2c.h  ezo_i2c.hpp
include/ezo_i2c/adapters/: arduino_wire.h  linux_i2c.h
platform/linux/: ezo_i2c_linux_i2c.c  ezo_linux_device.c  ezo_linux_i2c.c  ezo_uart_posix_serial.c
src/: README.md  ezo.c  ezo.h  ezo_arduino_common.hpp  ezo_arduino_i2c_example.hpp  ezo_arduino_uart_example.hpp  ezo_common.c  ezo_common.h  ezo_do.c  ezo_do.h  ezo_ec.c  ezo_ec.h  ezo_hum.c  ezo_hum.h  ezo_i2c.c  ezo_i2c.h  ezo_i2c.hpp  ezo_i2c_arduino_wire.cpp  ezo_i2c_arduino_wire.h  ezo_i2c_linux_i2c.h  ezo_orp.c  ezo_parse.c  ezo_parse.h  ezo_ph.c  ezo_product.c  ezo_product.h  ezo_rtd.c  ezo_schema.c  ezo_schema.h  ezo_uart.c  ezo_uart.h  ezo_uart_arduino_stream.cpp  ezo_uart_arduino_stream.h
tests/: README.md  test_ezo_calibration_transfer.c  test_ezo_control.c  test_ezo_do.c  test_ezo_ec.c  test_ezo_hum.c  test_ezo_i2c.c  test_ezo_i2c_cpp.cpp  test_ezo_orp.c  test_ezo_parse.c  test_ezo_ph.c  test_ezo_product.c  test_ezo_rtd.c  test_ezo_uart.c  test_linux_adapter.c  test_linux_device.c  test_uart_posix_adapter.c
tests/fakes/: README.md  ezo_fake_i2c_transport.c  ezo_fake_i2c_transport.h  ezo_fake_transport.c  ezo_fake_transport.h  ezo_fake_uart_transport.c  ezo_fake_uart_transport.h
(+161 files in other folders)
